@@ -102,9 +102,9 @@ SCM scm_char_set_adjoin_x (SCM cs, SCM rest);
 SCM scm_char_set_delete_x (SCM cs, SCM rest);
 SCM scm_char_set_complement (SCM cs);
 SCM scm_char_set_union (SCM rest);
-SCM scm_char_set_intersection (SCM cs1, SCM rest);
+SCM scm_char_set_intersection (SCM rest);
 SCM scm_char_set_difference (SCM cs1, SCM rest);
-SCM scm_char_set_xor (SCM cs1, SCM rest);
+SCM scm_char_set_xor (SCM rest);
 SCM scm_char_set_diff_plus_intersection (SCM cs1, SCM rest);
 SCM scm_char_set_complement_x (SCM cs);
 SCM scm_char_set_union_x (SCM cs1, SCM rest);
