@@ -1,3 +1,9 @@
+2001-07-22  Gary Houston  <ghouston@arglist.com>
+
+	* srfi-14.c (scm_char_set_intersection, scm_char_set_xor): remove
+	the compulsory cs1 arguments: all args are optional in final spec.
+	* srfi-14.h: declarations updated.
+
 2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
 
 	* srfi-11.scm, srfi-8.scm: Update copyright notice.
